refactor: Option use Consumer